implemented play store express server

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expressApps",
+  "name": "expressApps-RyanLeiPeter",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
